kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw3-deployment
  labels: 
    app: hw3
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 0
       maxUnavailable: 1
  selector:
    matchLabels: 
      app: hw3
  template:
    metadata:
      labels:
        app: hw3
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx
        image: nginx
        command: ["/bin/sh", "-c", "sed -i 's/listen  .*/listen 8000;/g' /etc/nginx/conf.d/default.conf && sed -i 's/usr\\/share\\/nginx\\/html/homework/g' /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: www
          mountPath: "/homework"
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["/usr/bin/rm", "-f", "/homework/index.html"]
      volumes:
      - name: www
        emptyDir: {}
