kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw3-service
  namespace: homework
spec:
  type: ClusterIP
  ports:
  - name: hw3-deployment
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: hw3
