kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework.otus
  namespace: homework
spec:
  ingressClassName: "nginx"
  rules:
    - host: homework.otus
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: hw3-service 
              port:
                number: 8000
